--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fontsource/dm-sans": "^4.5.9",
+    "@fontsource/oxygen": "^4.5.9",
+    "@fontsource/playfair-display": "^4.5.13",
+    "@fontsource/rufina": "^4.5.9",
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.4.2",
     "react": "^18.2.0",
