--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.10.0",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
+    "swiper": "^9.2.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
