[CODE]: Add authenticate to NodeJS server

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -202,4 +202,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Environment variables
+*.env
+
+build/
+
 # End of https://www.toptal.com/developers/gitignore/api/node,macos,windows,dotenv
