--- a/client/package.json
+++ b/client/package.json
@@ -10,26 +10,35 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/dm-sans": "^4.5.9",
     "@fontsource/oxygen": "^4.5.9",
     "@fontsource/playfair-display": "^4.5.13",
     "@fontsource/rufina": "^4.5.9",
+    "@hookform/resolvers": "^3.1.0",
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.4.2",
+    "axios": "^1.3.6",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.2",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
     "swiper": "^9.2.4",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-transition-group": "^4.4.5",
