--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,13 @@
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.4.2",
     "axios": "^1.3.6",
+    "classnames": "^2.3.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-image-magnify": "^2.7.4",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
@@ -42,6 +44,7 @@
     "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-image-magnify": "^2.7.1",
     "@types/react-transition-group": "^4.4.5",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
