--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-toastify": "^9.1.2",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.7.5",
     "swiper": "^9.2.4",
     "uuid": "^9.0.0",
     "yup": "^1.1.1"
