--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "antd": "^5.4.2",
     "axios": "^1.3.6",
     "classnames": "^2.3.2",
+    "framer-motion": "^10.12.10",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
