--- a/client/package.json
+++ b/client/package.json
@@ -52,12 +52,13 @@
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "eslint": "^8.38.0",
+    "eslint": "^8.40.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "typescript": "^4.9.5",
     "vite": "^4.2.0",
     "vite-tsconfig-paths": "^4.2.0",
