--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-image-magnify": "^2.7.4",
+    "react-otp-input": "^3.0.2",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
