--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-toastify": "^9.1.2",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.6.1",
     "sweetalert2": "^11.7.5",
     "swiper": "^9.2.4",
     "uuid": "^9.0.0",
