--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
-    "@types/node": "^18.16.5",
+    "@types/node": "^18.16.12",
     "@types/nodemailer": "^6.4.7",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
@@ -31,6 +31,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "nodemailer": "^6.9.2"
+    "mongodb": "^5.5.0",
+    "nodemailer": "^6.9.2",
+    "socket.io": "^4.6.1"
   }
 }
