[Refactor]: Component Icon

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "arrowParens": "avoid",
   "trailingComma": "none",
   "printWidth": 80,
-  "singleAttributePerLine": true
+  "singleAttributePerLine": true,
+  "useTabs": false
 }
