--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "sweetalert2": "^11.7.5",
     "swiper": "^9.2.4",
     "uuid": "^9.0.0",
+    "vite-plugin-svgr": "^3.2.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
