--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -62,6 +63,8 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jsdom": "^22.1.0",
+    "msw": "^1.2.1",
     "typescript": "^4.9.5",
     "vite": "^4.2.0",
     "vite-tsconfig-paths": "^4.2.0",
