--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,15 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "build/index.js",
+      "src": "./build/index.js",
       "use": "@vercel/node",
-      "config": { "includeFiles": ["build/**"] }
+      "config": { "includeFiles": ["./build/**"] }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "build/index.js"
+      "dest": "./build/index.js"
     }
   ]
 }
