--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "start:build": "tsc -w",
     "start:run": "nodemon build/index.js",
-    "start": "concurrently npm:start:*",
-    "vercel-build": "echo hello"
+    "start:dev": "concurrently npm:start:*",
+    "start": "ts-node src/index.ts",
+    "vercel-build": "echo vercel-build"
   },
   "keywords": [],
   "author": "",
